# fixer-prototype

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  demo.py  demo_fix.py  demo_scan.py  pyproject.toml  test.py
.github/workflows/: ci.yaml
